--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
+    "js-cookie": "^3.0.1",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
+    "vue-i18n": "^9.1.10",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0",
     "web3": "^1.7.1",
