--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
-VUE_APP_API=https://nftfl-backend.herokuapp.com/
+VUE_APP_API=api.uniquemultigame.site/
 
-VUE_APP_VIEW_ADDRESS=0xD21cCa804bDC30F4ed298EC2711a409B2F1Ee775
-VUE_APP_MATRIX_ADDRESS=0x14B568258058315ED95d7eb17EBDbbf3023493Bb
-VUE_APP_REINVEST_ADDRESS=0x07A22F67798F1913A57921d7D6D53fac99CBE1F8
+VUE_APP_VIEW_ADDRESS=0xc6Eacd4f8C1299806F45f928DCD88bA2aD0c0d3E
+VUE_APP_MATRIX_ADDRESS=0x556308cb931e8ABa01062132E5EF2f3B50a06ddb
+VUE_APP_REINVEST_ADDRESS=0xcfcE244d6ed6Bb33c9f2175B125e1730CddA6bB0
