--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
-VUE_APP_API=https://nftfl-backend.herokuapp.com/
+VUE_APP_API=api.uniquemultigame.site/
 
-VUE_APP_VIEW_ADDRESS=0x610178dA211FEF7D417bC0e6FeD39F05609AD788
-VUE_APP_MATRIX_ADDRESS=0x2279B7A0a67DB372996a5FaB50D91eAA73d2eBe6
-VUE_APP_REINVEST_ADDRESS=0x8A791620dd6260079BF849Dc5567aDC3F2FdC318
+VUE_APP_VIEW_ADDRESS=0xc6Eacd4f8C1299806F45f928DCD88bA2aD0c0d3E
+VUE_APP_MATRIX_ADDRESS=0x556308cb931e8ABa01062132E5EF2f3B50a06ddb
+VUE_APP_REINVEST_ADDRESS=0xcfcE244d6ed6Bb33c9f2175B125e1730CddA6bB0
