--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-VUE_APP_API=http://api.uniquemultigame.ru/
+VUE_APP_API=https://api.uniquemultigame.ru/
 
 VUE_APP_VIEW_ADDRESS=0xc6Eacd4f8C1299806F45f928DCD88bA2aD0c0d3E
 VUE_APP_MATRIX_ADDRESS=0x556308cb931e8ABa01062132E5EF2f3B50a06ddb
